# commune-cli

./: pyproject.toml
commune_cli/: __init__.py  banner.py  client.py  config.py  main.py  state.py
commune_cli/commands/: context.py  describe.py  doctor.py
