[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "commune-cli"
version = "0.2.0"
description = "Official CLI for the Commune email API — agent-native, pipe-friendly, covers every API surface."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["commune", "email", "cli", "agent", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Email",
    "Topic :: Utilities",
]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "httpx>=0.27.0",
    "cryptography>=41.0.0",
    "platformdirs>=4.0.0",
    "tomli>=2.0.0; python_version < '3.11'",
]

[project.scripts]
commune = "commune_cli.main:app"

[project.urls]
Homepage = "https://commune.email"
Documentation = "https://docs.commune.email"
Repository = "https://github.com/commune-email/commune"

[tool.hatch.build.targets.wheel]
packages = ["commune_cli"]

[tool.hatch.metadata]
allow-direct-references = true
